# pytmod

./: .coverage  .gitignore  .pre-commit-config.yaml  README.md  coverage.xml  environment.yml  justfile  noxfile.py  pyproject.toml
.github/workflows/: codeflash.yaml  doc.yml  labeler.yml  release.yml  test.yml
dev/: update_header.py
dev/code/: core.py  dev.py  dev1.py  dev_latest.py
doc/: Makefile  conf.py  get_versions.py  index.md  install.md  redirect.html  redirect.py  sg_execution_times.rst
doc/_build/doctrees/: biblio.doctree  coverage.doctree  environment.pickle  index.doctree  install.doctree  sg_execution_times.doctree
doc/_build/doctrees/autoapi/: index.doctree
doc/_build/doctrees/autoapi/pytmod/: index.doctree
doc/_build/doctrees/autoapi/pytmod/eig/: index.doctree
doc/_build/doctrees/autoapi/pytmod/helpers/: index.doctree
doc/_build/doctrees/autoapi/pytmod/material/: index.doctree
doc/_build/doctrees/autoapi/pytmod/slab/: index.doctree
doc/_build/doctrees/examples/: index.doctree  plot_material.doctree  plot_slab.doctree  plot_slab_field.doctree  plot_slab_modes.doctree  sg_execution_times.doctree
doc/_build/html/: .buildinfo  biblio.html  coverage.html  genindex.html  index.html  install.html  objects.inv  py-modindex.html  search.html  searchindex.js  sg_execution_times.html
doc/_build/html/_downloads/6117813bc319bfa4cb3c77eb4afbff59/: plot_material.py
doc/_build/html/_downloads/831eddb8a2b6e93db5f9b3184d48eda0/: plot_slab.py
doc/_build/html/_downloads/ae49b6d84d5e693bb4a518d7058b4e82/: plot_slab_modes.ipynb
doc/_build/html/_downloads/bb7c74cc7795e898b0b009940391aa7d/: plot_material.ipynb
doc/_build/html/_modules/: index.html
doc/_build/html/_modules/pytmod/: eig.html  helpers.html  material.html  slab.html
doc/_build/html/_sources/: biblio.md.txt  biblio.rst.txt  coverage.md.txt  index.md.txt  install.md.txt
doc/_build/html/_sources/autoapi/: index.rst.txt
doc/_build/html/_sources/autoapi/pytmod/: index.rst.txt
doc/_build/html/_sources/autoapi/pytmod/eig/: index.rst.txt
doc/_build/html/_sources/autoapi/pytmod/helpers/: index.rst.txt
doc/_build/html/_sources/autoapi/pytmod/material/: index.rst.txt
doc/_build/html/_sources/autoapi/pytmod/slab/: index.rst.txt
doc/_build/html/_sources/examples/: index.rst.txt  sg_execution_times.rst.txt
doc/_build/html/_static/: custom.css
doc/_build/html/autoapi/: index.html
doc/_build/html/autoapi/pytmod/: index.html
doc/_build/html/autoapi/pytmod/eig/: index.html
doc/_build/html/autoapi/pytmod/helpers/: index.html
doc/_build/html/autoapi/pytmod/material/: index.html
doc/_build/html/autoapi/pytmod/slab/: index.html
doc/_build/html/examples/: index.html  plot_material.html  plot_slab.html  plot_slab_field.html  plot_slab_modes.html  sg_execution_times.html
doc/_static/: custom.css  version-banner.js
doc/_templates/: footer.html  layout.html
doc/_templates/components/: nav-versions.html
doc/_templates/partials/: banner.html  webfonts.html
doc/autoapi/pytmod/: index.rst
doc/examples/: index.rst  plot_material.codeobj.json  plot_material.py  plot_material.rst  plot_slab.codeobj.json  plot_slab.ipynb  plot_slab.py.md5  plot_slab.rst  plot_slab_field.codeobj.json  plot_slab_field.ipynb  plot_slab_field.py  plot_slab_field.rst  plot_slab_modes.codeobj.json  plot_slab_modes.py  plot_slab_modes.rst  searchindex  sg_execution_times.rst
docs/: conf.py  get_versions.py  index.md  install.md  redirect.py
docs/_static/: biblio.bib
examples/: README.rst  arnoldi.py  plot_cylinder.py  plot_cylinder_modes.py  plot_material.py  plot_slab.py  plot_slab_fem_modes.py  plot_slab_field.py  plot_slab_modes.py
papers/PRB_112_214201/: biblio.bib  main.tex
pytmod/: __about__.py  __init__.py  _version.py  check_boundary.py  cylinder.py  eig.py  helpers.py  material.py  slab.py
pytmod/fem/: __init__.py  slab_solver.py
tests/: test_cylinder.py  test_eig.py  test_helpers.py  test_material.py  test_slab.py
